<resources>
    <string name="app_name">Course</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="enter_first_name">Enter First Name</string>
    <string name="enter_last_name">Enter Last Name</string>
    <string name="enter_email">Enter Email</string>
    <string name="enter_phonenumber">Enter Phonenumber</string>
    <string name="enter_password">Enter Password</string>
    <string name="register">Register</string>
    <string name="already_registered_login">Already Registered ? Login</string>
    <string name="enter_code">Enter Code</string>
    <string name="enter_name">Enter Name</string>
    <string name="enter_description">Enter Description</string>
    <string name="enter_instructor">Enter Instructor</string>
    <string name="add_course">Add Course</string>
    <string name="login">Login</string>
    <string name="need_an_account">Need an Account ?</string>
    <string name="courses">Courses</string>
    <string name="add_courses">Add Courses</string>
    <string name="profile">Profile</string>
    <string name="logout">Logout</string>
    <string name="about">About</string>
    <string name="my_courses">My Courses</string>
</resources>